@@ -29,6 +29,8 @@ GA  1.1.5 -
   metadataUseInfoSchema is true and for no schema. (Bug#19147897)
 - ResultSetMetaData::getColumnName() returns display name instead of actual
   column name. (Bug#19244736)
+- ResultSetMetaData::getTables() not returning result for VIEW when 
+  metadatauseinfoschema=false. (Bug#19505348)
 
 GA  1.1.4 -
 - Both static and dynamic driver libraries are now linked statically against
